--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -2,232 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\cleme\\anaconda3\\envs\\praxis-clements\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import dask.dataframe as dd\n",
     "\n",
     "import tensorflow as tf\n",
     "import keras\n",
     "import torch\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb\n",
-    "\n",
-    "import watermark"
+    "import seaborn as sb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.read_csv('email.csv', iterator=True, chunksize=1000)\n",
-    "\n",
-    "df1 = dd.read_csv('http.csv')\n"
+    "df1 = pd.read_csv('../../../../../../data/r4.2/email.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>date</th>\n",
-       "      <th>user</th>\n",
-       "      <th>pc</th>\n",
-       "      <th>url</th>\n",
-       "      <th>content</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>{V1Y4-S2IR20QU-6154HFXJ}</td>\n",
-       "      <td>01/02/2010 06:55:16</td>\n",
-       "      <td>LRR0148</td>\n",
-       "      <td>PC-4275</td>\n",
-       "      <td>http://msn.com/The_Human_Centipede_First_Seque...</td>\n",
-       "      <td>remain representatives consensus concert altho...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{Q5R1-T3EF87UE-2395RWZS}</td>\n",
-       "      <td>01/02/2010 07:00:13</td>\n",
-       "      <td>NGF0157</td>\n",
-       "      <td>PC-6056</td>\n",
-       "      <td>http://urbanspoon.com/Plunketts_Creek_Loyalsoc...</td>\n",
-       "      <td>festival off northwards than congestion partne...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{X9O1-O0XW52VO-5806RPHG}</td>\n",
-       "      <td>01/02/2010 07:03:46</td>\n",
-       "      <td>NGF0157</td>\n",
-       "      <td>PC-6056</td>\n",
-       "      <td>http://aa.com/Rhodocene/rhodocenium/fhaavatqrf...</td>\n",
-       "      <td>long away reorganized baldwin seth business 18...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{G5S8-U5OG04TE-5299CCTU}</td>\n",
-       "      <td>01/02/2010 07:05:26</td>\n",
-       "      <td>IRM0931</td>\n",
-       "      <td>PC-7188</td>\n",
-       "      <td>http://groupon.com/Leonhard_Euler/leonhard/tne...</td>\n",
-       "      <td>among german schwein experimental becomes prev...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{L0R4-A9DH29VP-4553AUWM}</td>\n",
-       "      <td>01/02/2010 07:05:52</td>\n",
-       "      <td>IRM0931</td>\n",
-       "      <td>PC-7188</td>\n",
-       "      <td>http://flickr.com/Inauguration_of_Barack_Obama...</td>\n",
-       "      <td>kate criteria j 2008 highest 12 include books ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125190</th>\n",
-       "      <td>{J1Z6-K2FM96DU-4651IFHN}</td>\n",
-       "      <td>05/16/2011 21:12:57</td>\n",
-       "      <td>BRM0995</td>\n",
-       "      <td>PC-0768</td>\n",
-       "      <td>http://mozilla.org/SR_West_Country_and_Battle_...</td>\n",
-       "      <td>success until guild arrangement purchase corne...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125191</th>\n",
-       "      <td>{I5O0-H9ES81JG-3328KDWR}</td>\n",
-       "      <td>05/16/2011 21:13:04</td>\n",
-       "      <td>BRM0995</td>\n",
-       "      <td>PC-0768</td>\n",
-       "      <td>http://mailchimp.com/Geology_of_the_Capitol_Re...</td>\n",
-       "      <td>below 1977 chest body reactivated official des...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125192</th>\n",
-       "      <td>{P8J8-D2GS19FZ-9438UQPV}</td>\n",
-       "      <td>05/16/2011 21:13:58</td>\n",
-       "      <td>ZSB0649</td>\n",
-       "      <td>PC-5343</td>\n",
-       "      <td>http://ibtimes.com/Halifax_Gibbet/infangtheof/...</td>\n",
-       "      <td>ben campaign november birminghams two 250000 s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125193</th>\n",
-       "      <td>{P3N4-E6XZ26LN-4661TPKI}</td>\n",
-       "      <td>05/16/2011 21:16:47</td>\n",
-       "      <td>BAM0636</td>\n",
-       "      <td>PC-8138</td>\n",
-       "      <td>http://macys.com/Durian/zibethinus/ercnvevaqbb...</td>\n",
-       "      <td>agencies whom sometimes often via under englis...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>125194</th>\n",
-       "      <td>{K0D4-Y1FT21II-1804YEIN}</td>\n",
-       "      <td>05/16/2011 21:23:10</td>\n",
-       "      <td>CGB0637</td>\n",
-       "      <td>PC-8508</td>\n",
-       "      <td>http://expedia.com/Tropical_Storm_Keith_1988/2...</td>\n",
-       "      <td>1600 fritz so 4clys household neighbouring dec...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>28434423 rows × 6 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                              id                 date     user       pc  \\\n",
-       "0       {V1Y4-S2IR20QU-6154HFXJ}  01/02/2010 06:55:16  LRR0148  PC-4275   \n",
-       "1       {Q5R1-T3EF87UE-2395RWZS}  01/02/2010 07:00:13  NGF0157  PC-6056   \n",
-       "2       {X9O1-O0XW52VO-5806RPHG}  01/02/2010 07:03:46  NGF0157  PC-6056   \n",
-       "3       {G5S8-U5OG04TE-5299CCTU}  01/02/2010 07:05:26  IRM0931  PC-7188   \n",
-       "4       {L0R4-A9DH29VP-4553AUWM}  01/02/2010 07:05:52  IRM0931  PC-7188   \n",
-       "...                          ...                  ...      ...      ...   \n",
-       "125190  {J1Z6-K2FM96DU-4651IFHN}  05/16/2011 21:12:57  BRM0995  PC-0768   \n",
-       "125191  {I5O0-H9ES81JG-3328KDWR}  05/16/2011 21:13:04  BRM0995  PC-0768   \n",
-       "125192  {P8J8-D2GS19FZ-9438UQPV}  05/16/2011 21:13:58  ZSB0649  PC-5343   \n",
-       "125193  {P3N4-E6XZ26LN-4661TPKI}  05/16/2011 21:16:47  BAM0636  PC-8138   \n",
-       "125194  {K0D4-Y1FT21II-1804YEIN}  05/16/2011 21:23:10  CGB0637  PC-8508   \n",
-       "\n",
-       "                                                      url  \\\n",
-       "0       http://msn.com/The_Human_Centipede_First_Seque...   \n",
-       "1       http://urbanspoon.com/Plunketts_Creek_Loyalsoc...   \n",
-       "2       http://aa.com/Rhodocene/rhodocenium/fhaavatqrf...   \n",
-       "3       http://groupon.com/Leonhard_Euler/leonhard/tne...   \n",
-       "4       http://flickr.com/Inauguration_of_Barack_Obama...   \n",
-       "...                                                   ...   \n",
-       "125190  http://mozilla.org/SR_West_Country_and_Battle_...   \n",
-       "125191  http://mailchimp.com/Geology_of_the_Capitol_Re...   \n",
-       "125192  http://ibtimes.com/Halifax_Gibbet/infangtheof/...   \n",
-       "125193  http://macys.com/Durian/zibethinus/ercnvevaqbb...   \n",
-       "125194  http://expedia.com/Tropical_Storm_Keith_1988/2...   \n",
-       "\n",
-       "                                                  content  \n",
-       "0       remain representatives consensus concert altho...  \n",
-       "1       festival off northwards than congestion partne...  \n",
-       "2       long away reorganized baldwin seth business 18...  \n",
-       "3       among german schwein experimental becomes prev...  \n",
-       "4       kate criteria j 2008 highest 12 include books ...  \n",
-       "...                                                   ...  \n",
-       "125190  success until guild arrangement purchase corne...  \n",
-       "125191  below 1977 chest body reactivated official des...  \n",
-       "125192  ben campaign november birminghams two 250000 s...  \n",
-       "125193  agencies whom sometimes often via under englis...  \n",
-       "125194  1600 fritz so 4clys household neighbouring dec...  \n",
-       "\n",
-       "[28434423 rows x 6 columns]"
+       "(2629979, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1.compute()"
+    "df1.shape"
    ]
   },
   {
