--- a/practice2.ipynb
+++ b/practice2.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "email = pd.read_csv('../../../../../../data/r4.2/email.csv')\n",
-    "files = pd.read_csv('../../../../../../data/r4.2/file.csv')\n",
+    "file = pd.read_csv('../../../../../../data/r4.2/file.csv')\n",
     "http = pd.read_csv('../../../../../../data/r4.2/http.csv')\n",
     "logon = pd.read_csv('../../../../../../data/r4.2/logon.csv')\n",
     "device = pd.read_csv('../../../../../../data/r4.2/device.csv')\n"
@@ -31,28 +31,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "enron = pd.read_csv('../../../../../../data/praxis/ENRON/emails_enron.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = [file,email,http,logon,device]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'email' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(email\u001b[39m.\u001b[39mshape)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(files\u001b[39m.\u001b[39mshape)\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(http\u001b[39m.\u001b[39mshape)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'email' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(445581, 6)\n",
+      "(2629979, 11)\n",
+      "(28434423, 6)\n",
+      "(854859, 5)\n",
+      "(405380, 5)\n"
      ]
     }
    ],
    "source": [
-    "print(email.shape)\n",
-    "print(files.shape)\n",
-    "print(http.shape)\n",
-    "print(logon.shape)\n",
-    "print(device.shape)"
+    "for x in files:\n",
+    "    print(x.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(517401, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enron.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>allen-p/_sent_mail/1.</td>\n",
+       "      <td>Message-ID: &lt;18782981.1075855378110.JavaMail.e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>allen-p/_sent_mail/10.</td>\n",
+       "      <td>Message-ID: &lt;15464986.1075855378456.JavaMail.e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>allen-p/_sent_mail/100.</td>\n",
+       "      <td>Message-ID: &lt;24216240.1075855687451.JavaMail.e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>allen-p/_sent_mail/1000.</td>\n",
+       "      <td>Message-ID: &lt;13505866.1075863688222.JavaMail.e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>allen-p/_sent_mail/1001.</td>\n",
+       "      <td>Message-ID: &lt;30922949.1075863688243.JavaMail.e...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       file                                            message\n",
+       "0     allen-p/_sent_mail/1.  Message-ID: <18782981.1075855378110.JavaMail.e...\n",
+       "1    allen-p/_sent_mail/10.  Message-ID: <15464986.1075855378456.JavaMail.e...\n",
+       "2   allen-p/_sent_mail/100.  Message-ID: <24216240.1075855687451.JavaMail.e...\n",
+       "3  allen-p/_sent_mail/1000.  Message-ID: <13505866.1075863688222.JavaMail.e...\n",
+       "4  allen-p/_sent_mail/1001.  Message-ID: <30922949.1075863688243.JavaMail.e..."
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enron.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
