--- a/cert-preprocess.ipynb
+++ b/cert-preprocess.ipynb
@@ -3,38 +3,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kenclements/praxis/blob/main/DNN-Basic-TWOS-0-1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kenclements/praxis/blob/main/cert-preprocess.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lN5-AcoypUan",
-        "outputId": "09238c19-c425-4dc6-f553-d0fc9fee57fe"
+        "outputId": "27a0d132-984b-4db2-973c-c2482bbe5db1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Tue Feb 21 22:15:47 2023       \n",
+            "Tue Feb 28 00:03:47 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 510.47.03    Driver Version: 510.47.03    CUDA Version: 11.6     |\n",
+            "| NVIDIA-SMI 525.85.12    Driver Version: 525.85.12    CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
             "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
             "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   47C    P0    26W /  70W |   1030MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   71C    P0    29W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -43,7 +43,7 @@
             "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
             "|        ID   ID                                                   Usage      |\n",
             "|=============================================================================|\n",
-            "|    0   N/A  N/A      6447      C                                    1027MiB |\n",
+            "|  No running processes found                                                 |\n",
             "+-----------------------------------------------------------------------------+\n"
           ]
         }
@@ -54,20 +54,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sI_JO6jFrD7Z",
-        "outputId": "e2126fc1-188f-4399-f39c-1daac1ed441f"
+        "outputId": "54588cba-2cf6-4cf6-d06a-8c75d47e77d7"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -78,78 +78,90 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "SpDcPu8tmmK0"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sb\n",
-        "import string\n",
-        "import re\n",
+        "# import numpy as np\n",
+        "# import matplotlib.pyplot as plt\n",
+        "# import seaborn as sb\n",
+        "# import string\n",
+        "# import re\n",
         "\n",
-        "#Vectorization and Tokenizing\n",
-        "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
-        "from sklearn.preprocessing import MaxAbsScaler\n",
+        "# #Vectorization and Tokenizing\n",
+        "# from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+        "# from sklearn.preprocessing import MaxAbsScaler\n",
         "\n",
-        "import nltk\n",
-        "from nltk.corpus import stopwords\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "from nltk import pos_tag\n",
-        "from nltk.stem import PorterStemmer\n",
-        "from nltk.stem import LancasterStemmer\n",
-        "\n",
-        "\n",
-        "#DNN Modules\n",
-        "import torch\n",
-        "import tensorflow as tf\n",
-        "from tensorflow.keras import layers\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense\n",
-        "from tensorflow.keras.layers import InputLayer\n",
-        "from tensorflow.keras import losses\n",
-        "from tensorflow.keras.regularizers import L2\n",
-        "from tensorflow.keras.utils import plot_model\n",
-        "from tensorflow.keras.layers import TextVectorization\n",
+        "# import nltk\n",
+        "# from nltk.corpus import stopwords\n",
+        "# from nltk.tokenize import word_tokenize\n",
+        "# from nltk import pos_tag\n",
+        "# from nltk.stem import PorterStemmer\n",
+        "# from nltk.stem import LancasterStemmer\n",
         "\n",
         "\n",
-        "#Models\n",
-        "from sklearn.ensemble import AdaBoostClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.linear_model import LinearRegression\n",
+        "# #DNN Modules\n",
+        "# import torch\n",
+        "# import tensorflow as tf\n",
+        "# from tensorflow.keras import layers\n",
+        "# from tensorflow.keras.models import Sequential\n",
+        "# from tensorflow.keras.layers import Dense\n",
+        "# from tensorflow.keras.layers import InputLayer\n",
+        "# from tensorflow.keras import losses\n",
+        "# from tensorflow.keras.regularizers import L2\n",
+        "# from tensorflow.keras.utils import plot_model\n",
+        "# from tensorflow.keras.layers import TextVectorization\n",
         "\n",
         "\n",
-        "#Metrics and Testing\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn import metrics\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.metrics import confusion_matrix"
+        "# #Models\n",
+        "# from sklearn.ensemble import AdaBoostClassifier\n",
+        "# from sklearn.neighbors import KNeighborsClassifier\n",
+        "# from sklearn.svm import SVC\n",
+        "# from sklearn.linear_model import LogisticRegression\n",
+        "# from sklearn.naive_bayes import GaussianNB\n",
+        "# from sklearn.linear_model import LinearRegression\n",
+        "\n",
+        "\n",
+        "# #Metrics and Testing\n",
+        "# from sklearn.model_selection import train_test_split\n",
+        "# from sklearn import metrics\n",
+        "# from sklearn.metrics import accuracy_score\n",
+        "# from sklearn.metrics import confusion_matrix"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "oR_xocCCmmK3"
       },
       "outputs": [],
       "source": [
-        "df1 = pd.read_csv('/Data/CERT/r4.2/logon.csv')\n",
-        "df2 = pd.read_csv('/Data/CERT/r4.2/device.csv')\n",
+        "#df1 = pd.read_csv('/Data/CERT/r4.2/logon.csv')\n",
+        "#df2 = pd.read_csv('/Data/CERT/r4.2/device.csv')\n",
+        "#df3 = pd.read_csv('/Data/CERT/r4.2/email.csv')\n",
+        "#df4 = pd.read_csv('/Data/CERT/r4.2/file.csv')\n",
+        "#df5 = pd.read_csv('/Data/CERT/r4.2/http.csv')\n",
+        "#df6 = pd.read_csv('/Data/CERT/r4.2/psychometric.csv')\n",
         "\n",
-        "\n"
+        "df1 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/logon.csv')\n",
+        "df2 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/device.csv')\n",
+        "\n",
+        "df3 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/http.csv')\n",
+        "df4 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/email.csv')\n",
+        "df5 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/file.csv')\n",
+        "df6 = pd.read_csv('/content/drive/MyDrive/Praxis/data/CERT42/psychometric.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "sSKhgr1mVOfT"
+      },
       "outputs": [],
       "source": [
         "rslt_df1 = df1[df1['user'] == 'NGF0157']"
@@ -157,8 +169,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ZRojCSZdVOfU",
+        "outputId": "d5ed6526-0678-4023-ccb2-65c9b7637563"
+      },
       "outputs": [
         {
           "data": {
@@ -323,8 +338,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "b2rlylwbVOfU"
+      },
       "outputs": [],
       "source": [
         "rslt_df2 = df2[df2['user'] == 'NGF0157']"
@@ -332,8 +349,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "AqXZG6WqVOfV",
+        "outputId": "7506dc59-9e05-4df1-9bd6-f3e6ac231f95"
+      },
       "outputs": [
         {
           "data": {
@@ -498,8 +518,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "To-v9XnyVOfW",
+        "outputId": "cbae14cf-3cba-4120-e07f-c1a958848557"
+      },
       "outputs": [
         {
           "name": "stderr",
@@ -516,8 +539,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "wRvdM8HMVOfW",
+        "outputId": "c327bad9-d80e-4c02-f1eb-20fe8120ed43"
+      },
       "outputs": [
         {
           "data": {
@@ -682,8 +708,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "DkgyUQ9DVOfX"
+      },
       "outputs": [],
       "source": [
         "df_merged['date'] = pd.to_datetime(df_merged['date'])"
@@ -691,8 +719,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "Dkz5YRzZVOfY",
+        "outputId": "b1189ab5-8829-43ae-e8db-a21f6545a7d2"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -719,8 +750,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "noPTtqiCVOfY"
+      },
       "outputs": [],
       "source": [
         "df_merged = df_merged.sort_values(\"date\")"
@@ -728,8 +761,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "V7qh9hRlVOfZ",
+        "outputId": "9f7b5613-e2eb-4baa-e0b2-f8e1486e29f0"
+      },
       "outputs": [
         {
           "data": {
@@ -1282,27 +1318,33 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "CxCowdO5VOfZ"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "eHdtXSFrVOfZ"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "1ZKEFEtaVOfa"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "XbC9JYmDSLpq"
       },
@@ -1314,7 +1356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1353,7 +1395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "qDp__hFtSLpr"
       },
@@ -1364,7 +1406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "erZ9jejySLpt"
       },
@@ -1380,7 +1422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1570,7 +1612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1639,7 +1681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1832,7 +1874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1871,7 +1913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "7QTeOVScgh8L"
       },
@@ -1882,7 +1924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1911,7 +1953,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "uumgrOo1hggC"
       },
@@ -1926,7 +1968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "oy8ByINZiTWU"
       },
@@ -1945,7 +1987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "eR0S_xQgxFES"
       },
@@ -1960,7 +2002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2000,7 +2042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": null,
       "metadata": {
         "id": "YED60nX3xE9Z"
       },
@@ -2012,7 +2054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2074,7 +2116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2097,7 +2139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2123,7 +2165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2150,7 +2192,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": null,
       "metadata": {
         "id": "75Ltwq4xCBKx"
       },
@@ -2159,10 +2201,10 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
+    "accelerator": "TPU",
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
