--- a/cert-preprocess2.ipynb
+++ b/cert-preprocess2.ipynb
@@ -471,7 +471,7 @@
         "        file_text = [i for s in file_text_temp for i in s]\n",
         "        http_text_temp = userd['df5tokenized'].to_list()\n",
         "        http_text = [i for s in http_text_temp for i in s]\n",
-        "        text = http_text \n",
+        "        text = http_text + file_text+ email_text\n",
         "        if (userd[(userd['label'] == 'bad')].shape[0] > 0): label = 'bad'\n",
         "        else: label = 'normal'\n",
         "        dfwow.append([date, username, login_count, logout_count, email_count, file_count, http_count, start_time, end_time, text, label])"
