--- a/cert-preprocess4-final.ipynb
+++ b/cert-preprocess4-final.ipynb
@@ -795,9 +795,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'df_final' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m users \u001b[39m=\u001b[39m df_final[\u001b[39m'\u001b[39m\u001b[39muser\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m users \u001b[39m=\u001b[39m users\u001b[39m.\u001b[39munique()\n\u001b[1;32m      4\u001b[0m DAYS_PAST \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'df_final' is not defined"
+          ]
+        }
+      ],
       "source": [
         "users = df_final['user']\n",
         "users = users.unique()\n",
@@ -846,6 +858,20 @@
         "    distances.append(euclidean(df_final.iloc[i]['dailyActivityMatrix'], df_final.iloc[i]['dailyActivityMatrixPast']))\n",
         "df_final['ind2past'] = distances"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "attachments": {},
@@ -3781,7 +3807,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.16"
+      "version": "3.9.17"
     },
     "orig_nbformat": 4,
     "vscode": {
